# claude-pet

./: CONTRIBUTING.md  README.ko.md  README.md  install.ps1  install.sh  package-lock.json  package.json
src/: i18n.js  index.html  main.js  sessions.js  states.js  styles.css  themes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hook_sender.rs  hook_setup.rs  main.rs  themes.rs
src/locales/: en.json  ko.json
src/themes/cat/: config.json
src/themes/default/: config.json
src/themes/fruits/: config.json
src/themes/garden/: config.json
src/themes/ocean/: config.json
src/themes/space/: config.json
